Bug 389726 - Not all columns in currency dialog are sortable
Summary: Not all columns in currency dialog are sortable
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-31 22:09 UTC by Ralf Habacker
Modified: 2019-08-29 00:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-01-31 22:09:29 UTC
The columns in the currency dialog is sorted by name in ascending order, but other columns could not be sorted. It should be possible to sort other columns by clicking on the related column title. 

How to reproduce:
1. start kmymoney
2. click "Extra"->"Currencies"

What happens:
The currency dialog pops up with entries sorted by name in ascending order

What is expected:
The currency dialog should allow other columns (ID, symbol) also to be sorted
Comment 1 Ralf Habacker 2018-02-01 06:49:46 UTC
Git commit a7e0f9b8d3bc817696efa0aef085e6afc19e6a5e by Ralf Habacker.
Committed on 01/02/2018 at 06:49.
Pushed by habacker into branch '4.8'.

Fix 'Not all columns in currency dialog are sortable'
FIXED-IN:4.8.2

M  +2    -0    kmymoney/dialogs/kcurrencyeditdlg.cpp

https://commits.kde.org/kmymoney/a7e0f9b8d3bc817696efa0aef085e6afc19e6a5e
Comment 2 Thomas Baumgart 2018-02-01 14:47:24 UTC
Git commit b04fb583c9cd4f36ca0b3f668ba1cd0626eaf95f by Thomas Baumgart.
Committed on 01/02/2018 at 14:47.
Pushed by tbaumgart into branch '5.0'.

Allow to sort all columns in currency dialog

(cherry picked and adjusted from commit
a7e0f9b8d3bc817696efa0aef085e6afc19e6a5e)

M  +2    -0    kmymoney/dialogs/kcurrencyeditdlg.cpp

https://commits.kde.org/kmymoney/b04fb583c9cd4f36ca0b3f668ba1cd0626eaf95f