Fix 'Not all columns in currency dialog are sortable'

BUG:389726
FIXED-IN:4.8.2